--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -18,6 +18,133 @@
   }
 }
 
+#image-box{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.item-image{
+  background-color: #F5F5F5;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  &__content{
+    margin-top:15px;
+  }
+  &__operetion{
+    display: flex;
+    color: #0099e8;
+    text-align: center;
+    &--edit{
+      display: inline-block;
+      padding: 5px 10px;
+      border-right: 1px solid #eee;
+      font-size: 14px;
+      font-weight: 400;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      cursor: pointer;
+    }
+    &--delete{
+      font-size: 14px;
+      font-weight: 400;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      display: inline-block;
+      padding: 5px 8px;
+      cursor: pointer;
+    }
+  }
+}
+.item-num-0{
+  width: 100%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 40px;
+  cursor: pointer;
+  pre{
+    cursor: pointer;
+    display: block;
+  }
+}
+
+pre{
+  cursor: pointer;
+  white-space: pre-wrap;
+}
+
+.item-num-1{
+  width: 75%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 40px;
+  cursor: pointer;
+}
+.item-num-2{
+  width: 55%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 40px;
+  cursor: pointer;
+}
+.item-num-3{
+  width: 35%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 40px;
+  cursor: pointer;
+}
+.item-num-4{
+  width: 22%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 25px 5px;
+  cursor: pointer;
+}
+//下段のfile_field
+.item-num-5{
+  width: 100%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 40px;
+  cursor: pointer;
+}
+.item-num-6{
+  width: 75%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 40px;
+  cursor: pointer;
+}
+.item-num-7{
+  width: 55%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 40px;
+  cursor: pointer;
+}
+.item-num-8{
+  width: 40%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 30px;
+  cursor: pointer;
+}
+.item-num-9{
+  width: 22%;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 25px 5px;
+  cursor: pointer;
+}
+
 .exhibitcontent_main{
   background-color: #FFFFFF;
   margin: 0px 330px;
@@ -43,20 +170,6 @@
       @include font14__weight400;
       margin-top: 8px;
       margin-bottom:10px;
-    }
-    &--image{
-      position: relative;
-      background: #f5f5f5;
-      border: 1px dashed #ccc;
-      text-align: center;
-      padding: 40px;
-      cursor: pointer;
-      &--hide{
-        display: none;
-      }
-      pre{
-        cursor: pointer;
-      }
     }
   }
 
