--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -12,15 +12,15 @@
           必須
       .exhibitcontent_main__first--description
         最大10枚までアップロードできます。
-      .exhibitcontent_main__first--image#image-box
-        %label
-          = f.fields_for :product_images,class:"exhibitcontent_main__first--image" do |i|
-            .js-file_group{"data-index": i.index}
-              = i.file_field :image,class:"exhibitcontent_main__first--image--hide , js-file"
-              %span.js-remove 削除
-          %pre
-            ドロッグアンドドロップ
-            またはクリックしてファイルをアップロード
+      #image-box
+        .item-num-0#image-box__container
+          = f.fields_for :product_images do |i|
+            .exhibitcontent_main__first--image
+              = i.file_field :image, type: 'file', name: "product[product_images_attributes][][image]", value:"", style: "display:none", id:"img-file"
+              %label{for: "img-file"}
+                %pre
+                  ドロッグアンドドロップ
+                  またはクリックしてファイルをアップロード
   
     .exhibitcontent_main__second
       .exhibitcontent_main__second__top
