--- a/app/views/products/user_profile_edit.html.haml
+++ b/app/views/products/user_profile_edit.html.haml
@@ -2,10 +2,13 @@
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
 .u-main
-  = render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
+  -# = render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
+  .u-header
+    - breadcrumb :user_profile_edit
+    = render "layouts/breadcrumbs"
   .u-container
     .container-center
-      = render 'user_sidebar'  # ユーザマイページのヘッダーの部分テンプレートの呼び出し
+      = render 'user_sidebar'  # ユーザマイページのサイドバーの部分テンプレートの呼び出し
       .contents
         .profiles
           .profiles__profile
