--- a/app/views/products/user_profile_edit.html.haml
+++ b/app/views/products/user_profile_edit.html.haml
@@ -1,11 +1,11 @@
 -# ユーザマイページの右の部分 メルカリ>マイページ
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
-.u-main
-  -# = render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
-  .u-header
-    - breadcrumb :user_profile_edit
-    = render "layouts/breadcrumbs"
+-# .u-main
+-#   -# = render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
+-#   .u-header
+-#     - breadcrumb :user_profile_edit
+-#     = render "layouts/breadcrumbs"
   .u-container
     .container-center
       = render 'user_sidebar'  # ユーザマイページのサイドバーの部分テンプレートの呼び出し
